test/classes/delete-free/undecorated-generic/cannot-default-init-cq.good
cannot-default-init-cq.chpl:3: In function 'test':
cannot-default-init-cq.chpl:4: error: Cannot default-initialize a variable with generic type
cannot-default-init-cq.chpl:4: note: 'bb' has generic type 'C?'
cannot-default-init-cq.chpl:4: note: 'C?' now means nilable class with any management
cannot-default-init-cq.chpl:4: note: to migrate old code, change it to 'borrowed C?'
